routes list and card

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -35,4 +35,17 @@
           </select>
         </div>
       </div>
+      <br>
+      <br>
+      <figure class="text-center">
+        <blockquote class="blockquote">
+          <p class="mb-0">Мы постоянно расширяем свою сеть маршрутов, чтобы предоставить вам больше возможностей для путешествий. </p>
+        
+        </blockquote>
+        <figcaption class="blockquote-footer">
+          <b>Вот некоторые из наших новых маршрутов и лин, доступных для бронирования:</b>
+        </figcaption>
+      </figure>
+      <br>
+<app-routes-list></app-routes-list>
 </div>
