responsive design login page and registerpage

--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
   <div class="container">
-    <a class="navbar-brand" href="#">IBus</a>
-      <button class="btn btn-secondary my-2 my-sm-0">Авторизация</button>
+    <a class="navbar-brand" routerLink="/">IBus</a>
+      <button class="btn btn-secondary my-2 my-sm-0" routerLink="/login">Авторизация</button>
   </div>
 </nav>
