--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,15 +1,29 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-auto">
-                <form>
+                <form *ngIf="!(accountService.currentUser$|async)" #logginForm (ngSubmit) ="login()">
                     <h3 class="text-center">Авторизоваться</h3>
                     <hr>
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control" id="UserName" placeholder="Логин">
+                        <input 
+                        name="UserName"
+                        [(ngModel)]="model.userName"
+                        type="text" 
+                        class="form-control" 
+                        id="UserName" 
+                        placeholder="Логин"
+                        >
                         <label for="UserName">Логин</label>
                       </div>
                       <div class="form-floating mb-3">
-                        <input type="password" class="form-control" id="password" placeholder="Пароль" autocomplete="off">
+                        <input 
+                        name="Password"
+                        [(ngModel)]="model.password"
+                        type="password" 
+                        class="form-control" 
+                        id="password" 
+                        placeholder="Пароль" 
+                        autocomplete="off">
                         <label for="password">Пароль</label>
                       </div>
                     <br>
@@ -18,9 +32,9 @@
                         <button class="btn btn-primary" type="submit">Авторизоваться</button>
                         <button class="btn btn-default" type="button" routerLink="/">Отмена</button>
                       </div>
-                      <div class="row"> 
+                      <div class="row" *ngIf="loginErrors"> 
                         <ul class="text-danger">
-                            <li>Ошибка</li>
+                            <li *ngFor="let error of loginErrors">{{error}}</li>
                         </ul>
                       </div>
                 </form>
