--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -2,9 +2,8 @@
     <footer class="py-3 my-4 bg-primary">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
         <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Главная</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Обратная связь</a></li>
         <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Карьера у нас</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-white">О нас</a></li>
+        <li class="nav-item"><a href="/about" class="nav-link px-2 text-white">О нас</a></li>
       </ul>
       <p class="text-center text-white">© 2024 IBus inc...</p>
     </footer>
