routeEn card list

--- a/src/app/pages/routes/routes-card/routes-card.component.html
+++ b/src/app/pages/routes/routes-card/routes-card.component.html
@@ -1,7 +1,7 @@
 <div class="card border-primary mb-3" style="max-width: 20rem;">
-    <div class="card-header">дата</div>
+    <div class="card-header"><p>Добавлено {{getElapsedTime()}} назад</p></div>
     <div class="card-body">
-      <h4 class="card-title">Ташкент - Самарканд</h4>
-      <p class="card-text">12000сум</p>
+      <h4 class="card-title">{{routeEn?.starPoint}} - {{routeEn?.endPoint}}</h4>
+      <p class="card-text">{{routeEn?.price}} сум</p>
     </div>
   </div>
