--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -31,14 +31,8 @@
           </div>
           <div class="col-12 col-sm-3">
             <label class="col-form-label mt-2" > Во сколько?</label>
-            <select class="form-select" >
-              <option>10:00</option>
-              <option>11:00</option>
-              <option>12:00</option>
-              <option>14:00</option>
-              <option>15:00</option>
-              <option>16:00</option>
-              <option>17:00</option>
+            <select class="form-select">
+              <option *ngFor="let schedule of schedules" [value]="schedule.id">{{schedule.title}}</option>
             </select>
           </div>
           <div class="col-12 col-sm-3" style="margin-top: 30px;">
