--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -37,38 +37,46 @@
           </div>
       </div>
       @if (routeForTicked) {
-        <div class="row g-2 mt-4 text-center">
-          <div class="col-12 col-sm-3">
+        <div class="row g-2 mt-4 text-center fade-in ">
+          <div class="col-12 col-sm-3" [ngClass]="{'col-sm-4':!(accountService.currentUser$|async)}">
             <h2 class="mt-2">{{routeForTicked.starPoint}}</h2>
           </div>
-          <div class="col-12 col-sm-3">
+          <div class="col-12 col-sm-3" [ngClass]="{'col-sm-4':!(accountService.currentUser$|async)}">
             <h2 class="mt-2">{{routeForTicked.endPoint}}</h2>
           </div>
-          <div class="col-12 col-sm-3">
-            <h1 class="mt-2">{{routeForTicked.price}}сум</h1>
+          <div class="col-12 col-sm-3" [ngClass]="{'col-sm-4':!(accountService.currentUser$|async)}">
+            <h1 class="mt-2 h1-pulse">{{routeForTicked.price}}сум</h1>
           </div>
           <div class="col-12 col-sm-3" >
-            <button class="btn btn-primary" type="submit">Купить</button>
+            <button class="btn btn-primary" *ngIf="accountService.currentUser$|async" type="submit">Купить</button>
           </div>
       </div>
+      @if(!(accountService.currentUser$|async)){
+        <hr>
+        <div class="text-center text-focus-in">
+          <h3>Билет найден по выбранному направлению! Авторизуйтесь, чтобы приобрести его.</h3>
+          <br>
+          <button class="btn btn-primary  h1-pulse" routerLink="/login">Авторизация</button>
+        </div>
+        
+    
+      }
       }
       @else {
         @if(fromIdSelected&&toIdSelected){
           <div class="row mt-4">
             <div class="col-sm-12">
-              <h4 class="text-center">К сожалению, в данный момент не найдено доступных билетов по вашему выбранному направлению. Мы сожалеем за любые неудобства, которые это может вызвать</h4>
+              <h4 class="text-center text-focus-in ">К сожалению, в данный момент не найдено доступных билетов по вашему выбранному направлению. Мы сожалеем за любые неудобства, которые это может вызвать</h4>
             </div>
           </div>
         }
       }
-
     </form>
       <br>
       <br>
       <figure class="text-center">
         <blockquote class="blockquote">
           <p class="mb-0">Мы постоянно расширяем свою сеть маршрутов, чтобы предоставить вам больше возможностей для путешествий. </p>
-        
         </blockquote>
         <figcaption class="blockquote-footer">
           <b>Вот некоторые из наших новых маршрутов и лин, доступных для бронирования:</b>
