--- a/src/app/pages/ticket-confirm/ticket-confirm.component.html
+++ b/src/app/pages/ticket-confirm/ticket-confirm.component.html
@@ -1,5 +1,6 @@
 <h1>{{ticketData?.starPoint}}</h1>
 <h1>{{ticketData?.endPoint}}</h1>
 <h1>{{ticketData?.price}} сум</h1>
-<h1>{{schedule}}</h1>
+<h1>{{ ticketData?.date | date:'d MMMM, yyyy' }}, {{ schedule }}</h1>
+<h1></h1>
 
