--- a/src/app/pages/ticket-confirm/ticket-confirm.component.html
+++ b/src/app/pages/ticket-confirm/ticket-confirm.component.html
@@ -1,6 +1,19 @@
-<h1>{{ticketData?.starPoint}}</h1>
-<h1>{{ticketData?.endPoint}}</h1>
-<h1>{{ticketData?.price}} сум</h1>
-<h1>{{ ticketData?.date | date:'d MMMM, yyyy' }}, {{ schedule }}</h1>
-<h1></h1>
+<div class="row ">
+    <div class="d-flex justify-content-center slideR">
+        <div class="col-sm-6">
+            <p style="font-size: 2em;"><strong>Проверьте, все верно?</strong></p>
+            <p style="font-size: 1.6em;">{{ticketData?.starPoint}} - {{ticketData?.endPoint}}</p>
+            <p style="font-size: 1.6em;">Дата и время поездки: {{ ticketData?.date | date:'d MMMM, yyyy' }}, в {{ schedule }}</p>
+            <p style="font-size: 1.6em;">Стоимость билета: {{ticketData?.price}} сум</p>
+            <br>
+            <button class="btn btn-primary">Да</button>
+            <button class="btn btn-primary" style="margin-left: 14px;" routerLink="/">Нет</button>
+        </div>
+      
+    </div>
+
+</div>
+
+
+
 
