--- a/src/app/pages/admin-panel/admin-panel.component.html
+++ b/src/app/pages/admin-panel/admin-panel.component.html
@@ -1,16 +1,16 @@
 <div class="container">
     <tabset [justified]="true">
-        <tab heading="Маршурты">
+        <tab heading="Маршурты" class="slideT">
             <app-all-routes></app-all-routes>
         </tab>
-        <tab heading="Районы">
+        <tab heading="Районы" class="slideR">
             <app-all-districts></app-all-districts>
         </tab>
-        <tab heading="Расписания">
+        <tab heading="Расписания" class="slideT">
             <app-all-schedules></app-all-schedules>
             
         </tab>
-        <tab heading="Билеты">
+        <tab heading="Билеты" class="slideR">
             <app-all-tickets></app-all-tickets>
         </tab>
     </tabset>
