--- a/src/app/pages/admin/all-routes/all-routes.component.html
+++ b/src/app/pages/admin/all-routes/all-routes.component.html
@@ -1,1 +1,24 @@
-<p>all-routes works!</p>
+<br>
+<div class="d-flex align-items-center flex-wrap">
+    <div class="me-auto">
+      <button class="btn btn-outline-primary mb-4 mb-sm-0">Добавить</button>
+    </div>
+    <input class="form-control mr-sm-2 me-2 mb-sm-0" #search style="width: 600px;" placeholder="Поиск" type="text">
+    <div class="d-flex">
+      <button (click)="onSearch()" class="btn btn-outline-primary me-2">Поиск</button>
+      <button (click)="onReset()" class="btn btn-outline-danger">Сброс</button>
+    </div>
+  </div>
+<hr>
+<table class="table" >
+    <tbody>
+      <tr *ngFor="let rout of routes">
+        <th scope="row">{{rout.id}}</th>
+        <td>{{rout.starPoint}}</td>
+        <td>{{rout.endPoint}}</td>
+        <td>{{rout.price}} сум</td>
+        <td><button class="btn btn-outline-danger" >Удалить</button></td>
+      </tr>
+ 
+    </tbody>
+  </table>
