--- a/src/styles.css
+++ b/src/styles.css
@@ -32,3 +32,18 @@
     }
   }
   
+  .slideTo{
+    opacity: 0;
+    animation: slightTop 1s ease forwards;
+  }
+  
+  @keyframes slightTop {
+    0%{
+      opacity: 0;
+      transform: translateY(100px);
+    }
+    100%{
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
