--- a/src/app/pages/admin/all-districts/all-districts.component.html
+++ b/src/app/pages/admin/all-districts/all-districts.component.html
@@ -1,1 +1,31 @@
-<p>all-districts works!</p>
+<br>
+<div class="d-flex align-items-center flex-wrap">
+    <div class="me-auto">
+      <button class="btn btn-outline-primary mb-4 mb-sm-0">Добавить</button>
+    </div>
+    <input class="form-control mr-sm-2 me-2 mb-sm-0" #search style="width: 600px;" placeholder="Поиск" type="text">
+    <div class="d-flex">
+      <button (click)="onSearch()" class="btn btn-outline-primary me-2" type="submit">Поиск</button>
+      <button (click)="onReset()" class="btn btn-outline-danger">Сброс</button>
+    </div>
+  </div>
+<hr>
+@if (dists.length>0) {
+    <table class="table slideTo" >
+        <tbody>
+          <tr *ngFor="let rout of dists">
+            <th scope="row">{{rout.id}}</th>
+            <td>{{rout.title}}</td>
+            <td><button class="btn btn-outline-danger" >Удалить</button></td>
+          </tr>
+        </tbody>
+      </table>
+}@else {
+    <div class="container" style="height: 400px;">
+        <div class="d-flex justify-content-center slideTo" >
+            <h5>Район не найден....</h5>
+        </div>
+    </div>
+
+}
+
