--- a/src/app/pages/admin/all-districts/all-districts.component.html
+++ b/src/app/pages/admin/all-districts/all-districts.component.html
@@ -3,7 +3,7 @@
     <div class="me-auto">
       <button class="btn btn-outline-primary mb-4 mb-sm-0">Добавить</button>
     </div>
-    <input class="form-control mr-sm-2 me-2 mb-sm-0" #search style="width: 600px;" placeholder="Поиск" type="text">
+    <input  name="search" class="form-control mr-sm-2 me-2 mb-sm-0" #search style="width: 600px;" placeholder="Поиск" type="text">
     <div class="d-flex">
       <button (click)="onSearch()" class="btn btn-outline-primary me-2" type="submit">Поиск</button>
       <button (click)="onReset()" class="btn btn-outline-danger">Сброс</button>
