--- a/src/app/pages/admin/all-routes/all-routes.component.html
+++ b/src/app/pages/admin/all-routes/all-routes.component.html
@@ -29,8 +29,9 @@
     </div>
 </div>
 }
+<br>
 <div class="d-flex justify-content-center" *ngIf="pagination">
-  <pagination 
+  <pagination class="pagination-lg"
   [boundaryLinks]="true" 
   [totalItems]="pagination.totalItems"
   [itemsPerPage]="pagination.itemsPerPage"
