--- a/src/app/pages/admin/all-routes/all-routes.component.html
+++ b/src/app/pages/admin/all-routes/all-routes.component.html
@@ -1,7 +1,7 @@
 <br>
 <div class="d-flex align-items-center flex-wrap">
     <div class="me-auto">
-      <button class="btn btn-outline-primary mb-4 mb-sm-0">Добавить</button>
+      <button class="btn btn-outline-primary mb-4 mb-sm-0" (click)="openCreateModal()">Добавить</button>
     </div>
     <input name="search" class="form-control mr-sm-2 me-2 mb-sm-0" #search style="width: 600px;" placeholder="Поиск" type="text">
     <div class="d-flex">
