--- a/src/app/pages/admin/all-schedules/all-schedules.component.html
+++ b/src/app/pages/admin/all-schedules/all-schedules.component.html
@@ -1,7 +1,7 @@
 <br>
 <div class="d-flex align-items-center flex-wrap">
     <div class="me-auto">
-      <button class="btn btn-outline-primary mb-4 mb-sm-0">Добавить</button>
+      <button class="btn btn-outline-primary mb-4 mb-sm-0" (click)="openCreateModal()">Добавить</button>
     </div>
   </div>
 <hr>
