--- a/src/app/pages/ticket-details/ticket-details.component.html
+++ b/src/app/pages/ticket-details/ticket-details.component.html
@@ -1,4 +1,6 @@
-<div class="">
+<div class="container">
+    <br>
+    <br>
     <div class="row">
         <div class="d-flex justify-content-center">
             <div class="col-sm-4">
@@ -7,9 +9,10 @@
         </div>
         <div class="d-flex justify-content-center">
             <div class="col-sm-4">
-                <h5>{{ticket.routeId}}</h5>
-                <h5>{{ticket.routeId}}</h5>
-                <h5>{{ticket.scheduleId}}</h5>
+                <h5>{{ticket.start}} - {{ticket.end}}</h5>
+                <h5>{{ticket.price}}</h5>
+                <h5>{{ticket.date}}</h5>
+                <h5>{{ticket.schedule}}</h5>
             </div>
         </div>
     </div>
