--- a/src/app/layout/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar.component.html
@@ -1,6 +1,11 @@
 <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
   <div class="container">
-      <a class="navbar-brand" routerLink="/">IBus</a>
+      <a class="navbar-brand" [ngClass]="{'active':isHomeRoute()}" routerLink="/">IBus</a>
+      <ul class="navbar-nav me-auto" *ngIf="(accountService.currentUser$|async)">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/tickets" [ngClass]="{'active':isTicketsRoute()}">Мои билеты</a>
+        </li>
+      </ul>
       <button *ngIf="!(accountService.currentUser$|async)" class="btn btn-secondary my-2 my-sm-0" type="button" routerLink="/login">Авторизация</button>
       <button  *ngIf="(accountService.currentUser$|async) as user" class="btn btn-secondary my-2 my-sm-0" type="button" (click)="logout()">{{user.userName}}</button>
   </div>
